# Shojin

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  build  build_libs_unix.sh  fbs_script.sh  main.cpp
core/: shape_data.h  sim_time.hpp  simulator.cpp  simulator.hpp
core/fbs/schemas/: cube.fbs  cubes.fbs
core/systems/: collision_system.cpp  collision_system.hpp  init_system.cpp  init_system.hpp  physics_system.cpp  physics_system.hpp  render_system.cpp  render_system.hpp  shader.hpp  system.hpp
include/: system.h
render/: renderer.hpp  shader.hpp
src/: .main.cpp.swo  main.cpp  shojin.cpp  shojin.hpp  shojin_time.hpp  simulator.hpp  system1.cpp  system2.cpp
src/fbs/: .gitignore
src/fbs/schemas/: cubes.fbs
src/fbs/schemas/googletest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
src/fbs/schemas/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/fbs/schemas/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/systems/: collision_system.cpp  collision_system.hpp  init_system.cpp  render_system.cpp  render_system.hpp
test/: CMakeLists.txt  test.cpp
test/shojin_clock/: shojin_clock.cpp
